test/error/unmatched_endif.sv
// pattern: `endif directive outside of an `if/`endif block
`endif
